# keep-alive

./: README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-18-keep-alive-restructure.md  2026-03-18-release-distribution.md
docs/superpowers/specs/: 2026-03-18-keep-alive-restructure-design.md  2026-03-18-release-distribution-design.md
keep_alive/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  paths.py  process_manager.py  runtime.py  schedule.py  simulator.py
keep_alive/installers/: __init__.py  linux.py  macos.py  windows.py
scripts/: build-pyinstaller.sh  install.sh
